--- a/index.html
+++ b/index.html
@@ -10,305 +10,23 @@
   <meta property="og:description" content="Join the on-chain circus: laugh, juggle, and honk your way through Solana with $CLOWN." />
   <meta name="theme-color" content="#7C3AED" />
   <style>
-    :root{
-      --bg:#0b0b14;           /* stage */
-      --ink:#f5f6ff;          /* spotlight */
-      --mute:#a7a7c7;         /* dim light */
-      --brand:#7C3AED;        /* neon purple */
-      --accent:#22d3ee;       /* aqua */
-      --lime:#84cc16;         /* lime */
-      --rose:#fb7185;         /* clown nose */
-      --card: rgba(255,255,255,.06);
-      --glass: rgba(124,58,237,.18);
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-      color:var(--ink); background: radial-gradient(80vw 60vh at 20% 10%, rgba(124,58,237,.25), transparent 60%),
-                         radial-gradient(70vw 60vh at 90% 10%, rgba(34,211,238,.18), transparent 60%),
-                         linear-gradient(180deg, #0b0b15 0%, #050509 100%);
-      overflow-x:hidden;
-    }
-    a{color:inherit; text-decoration:none}
-    .wrap{max-width:1100px; margin:0 auto; padding:20px}
-    .nav{display:flex; align-items:center; justify-content:space-between; gap:12px; padding:12px 10px}
-    .brand{display:flex; align-items:center; gap:12px; font-weight:800; letter-spacing:.3px}
-    .badge{padding:.35rem .6rem; border:1px solid rgba(255,255,255,.14); border-radius:999px; font-size:.8rem; color:var(--mute)}
-
-    .card{background:var(--card); border:1px solid rgba(255,255,255,.08); box-shadow: 0 10px 40px rgba(124,58,237,.15); border-radius:20px}
-    .glass{background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.03)); border:1px solid rgba(255,255,255,.12); backdrop-filter: blur(8px);}
-
-    .hero{display:grid; grid-template-columns: 1.2fr .8fr; gap:26px; align-items:center; padding:26px}
-    @media (max-width: 900px){ .hero{grid-template-columns:1fr} }
-
-    h1{font-size: clamp(2.2rem, 4vw, 3.5rem); line-height:1.05; margin:10px 0 14px;}
-    .lead{color:var(--mute); font-size: clamp(1rem, 1.8vw, 1.15rem)}
-
-    .btns{display:flex; flex-wrap:wrap; gap:12px; margin-top:16px}
-    .btn{display:inline-flex; align-items:center; gap:10px; padding:12px 16px; border-radius:14px; border:1px solid rgba(255,255,255,.14); font-weight:700}
-    .btn.primary{background:linear-gradient(90deg, var(--brand), #9f67ff); border-color:transparent}
-    .btn.alt{background:rgba(255,255,255,.06)}
-
-    .pill{display:inline-flex; align-items:center; gap:8px; padding:8px 12px; border-radius:999px; background:rgba(124,58,237,.15); border:1px solid rgba(124,58,237,.35); font-weight:700;}
-
-    .grid{display:grid; grid-template-columns: repeat(3, 1fr); gap:16px}
-    @media (max-width: 900px){ .grid{grid-template-columns:1fr} }
-
-    .section{margin:46px 0}
-    .section h2{font-size: clamp(1.5rem, 2.4vw, 2rem); margin:0 0 12px}
-    .section p{color:var(--mute)}
-    ul.clean{list-style:none; padding:0; margin:0}
-    .li{display:flex; align-items:flex-start; gap:12px; padding:12px; border-radius:14px; background:rgba(255,255,255,.03); border:1px dashed rgba(255,255,255,.12)}
-
-    /* clown mascot */
-    .mascot{position:relative; aspect-ratio:1/1; width:min(480px, 80vw); margin:0 auto;}
-    .bubble{position:absolute; inset:0; background: radial-gradient(circle at 30% 25%, rgba(255,255,255,.6), rgba(255,255,255,.15) 35%, transparent 60%),
-                                           linear-gradient(180deg, rgba(124,58,237,.35), rgba(34,211,238,.25)); border-radius:30px; border:1px solid rgba(255,255,255,.18);}
-    .clown{position:absolute; inset:10% 12%;}
-    /* Simple clown SVG wiggle */
-    .wiggle{animation:wiggle 3.2s ease-in-out infinite}
-    @keyframes wiggle{0%,100%{transform:rotate(-1deg) translateY(0)}50%{transform:rotate(1deg) translateY(-2px)}}
-
-    .token-box{display:flex; gap:12px; align-items:center; padding:10px; border-radius:12px; background:rgba(255,255,255,.05); border:1px solid rgba(255,255,255,.12)}
-    .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; font-size:.95rem}
-    .chip{padding:.25rem .5rem; border:1px solid rgba(255,255,255,.18); border-radius:8px; font-size:.8rem; color:var(--mute)}
-
-    .footer{display:flex; flex-wrap:wrap; gap:8px; align-items:center; justify-content:space-between; padding:22px; color:var(--mute)}
-
-    /* confetti */
-    canvas#confetti{position:fixed; inset:0; pointer-events:none; z-index:1;}
-
-    .marquee{overflow:hidden; border-radius:12px; border:1px solid rgba(255,255,255,.08); background:rgba(255,255,255,.03)}
-    .marquee-track{display:flex; gap:30px; padding:10px 0; animation:slide 28s linear infinite}
-    @keyframes slide{0%{transform:translateX(0)}100%{transform:translateX(-50%)}}
-
-    .note{font-size:.9rem; color:var(--mute)}
+    body {margin:0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#0b0b14; color:#f5f6ff; text-align:center; padding:20px;}
+    .hero {max-width:800px; margin:0 auto;}
+    h1 {font-size:2.5rem; color:#7C3AED;}
+    .lead {color:#a7a7c7; font-size:1.2rem;}
+    img.hero-img {max-width:100%; border-radius:20px; box-shadow:0 10px 40px rgba(124,58,237,.3); margin-top:20px;}
+    .btn {display:inline-block; margin:10px; padding:12px 20px; border-radius:12px; background:#7C3AED; color:white; font-weight:600; text-decoration:none;}
   </style>
 </head>
 <body>
-  <canvas id="confetti"></canvas>
-  <header class="wrap nav">
-    <div class="brand">
-      <svg width="36" height="36" viewBox="0 0 120 120" class="wiggle" aria-hidden="true">
-        <defs>
-          <radialGradient id="g" cx="50%" cy="40%" r="70%">
-            <stop offset="0%" stop-color="#fff" stop-opacity=".9"/>
-            <stop offset="100%" stop-color="#ffffff" stop-opacity=".2"/>
-          </radialGradient>
-        </defs>
-        <!-- clown face -->
-        <circle cx="60" cy="60" r="50" fill="url(#g)" stroke="rgba(255,255,255,.5)"/>
-        <circle cx="45" cy="55" r="7" fill="#22d3ee"/>
-        <circle cx="75" cy="55" r="7" fill="#22d3ee"/>
-        <circle cx="60" cy="70" r="9" fill="#fb7185"/>
-        <path d="M40 80 Q60 95 80 80" fill="none" stroke="#7C3AED" stroke-width="6" stroke-linecap="round"/>
-        <rect x="28" y="23" width="64" height="14" rx="7" fill="#7C3AED"/>
-        <circle cx="28" cy="30" r="7" fill="#22d3ee"/>
-        <circle cx="92" cy="30" r="7" fill="#22d3ee"/>
-      </svg>
-      <span style="font-size:1.15rem">Sol Clown <span class="badge">$CLOWN</span></span>
+  <div class="hero">
+    <h1>Sol Clown — The On‑Chain Circus 🤡</h1>
+    <p class="lead">Sol Clown ($CLOWN) brings laughter, memes, and mayhem to Solana. Join the biggest on‑chain circus on Pump.fun!</p>
+    <img src="A_digital_painting_features_a_clown_with_elements_.png" alt="Sol Clown mascot" class="hero-img"/>
+    <div>
+      <a href="https://pump.fun/coin/YOUR_TOKEN_ADDRESS_HERE" class="btn">Buy on Pump.fun</a>
+      <a href="https://dexscreener.com/solana/YOUR_TOKEN_ADDRESS_HERE" class="btn" style="background:#22d3ee;">View Chart</a>
     </div>
-    <nav style="display:flex; gap:10px; flex-wrap:wrap">
-      <a class="btn alt" href="#how">How to Buy</a>
-      <a class="btn alt" href="#tokenomics">Tokenomics</a>
-      <a class="btn alt" href="#roadmap">Roadmap</a>
-    </nav>
-  </header>
-
-  <main class="wrap" style="position:relative; z-index:2">
-    <section class="hero card">
-      <div style="padding:20px 22px 26px">
-        <div class="pill">🎪 Welcome to the On‑Chain Circus</div>
-        <h1>Meet <span style="background:linear-gradient(90deg, var(--brand), var(--accent)); -webkit-background-clip:text; background-clip:text; color:transparent">Sol Clown</span> — the memecoin where every block is a punchline.</h1>
-        <p class="lead">Powered by Solana speed, boosted by community chaos. No promises, just pure fun, clean memes, and a big red nose pointed straight at the moon. 🤡🌕</p>
-        <div class="btns">
-          <a class="btn primary" id="buyBtn" target="_blank" rel="noopener">Buy on Pump.fun</a>
-          <a class="btn alt" id="chartBtn" target="_blank" rel="noopener">View Chart</a>
-          <a class="btn alt" id="xBtn" target="_blank" rel="noopener">Follow on X</a>
-          <a class="btn alt" id="tgBtn" target="_blank" rel="noopener">Join Telegram</a>
-        </div>
-        <div style="height:12px"></div>
-        <div class="token-box">
-          <span class="chip">Token</span>
-          <code id="ca" class="mono">YOUR_TOKEN_ADDRESS_HERE</code>
-          <button class="btn alt" id="copy">Copy</button>
-        </div>
-        <p class="note" style="margin-top:8px">Replace the address above once your token is created on Pump.fun.</p>
-      </div>
-      <div style="padding:14px">
-        <div class="mascot card glass">
-          <div class="bubble"></div>
-          <div class="clown wiggle">
-            <!-- Larger version of the clown with a spinning coin -->
-            <svg viewBox="0 0 200 200" width="100%" height="100%" aria-label="Sol Clown Mascot">
-              <defs>
-                <radialGradient id="face" cx="50%" cy="35%" r="70%">
-                  <stop offset="0%" stop-color="#fff" stop-opacity=".95"/>
-                  <stop offset="100%" stop-color="#ffffff" stop-opacity=".2"/>
-                </radialGradient>
-              </defs>
-              <circle cx="100" cy="100" r="80" fill="url(#face)" stroke="rgba(255,255,255,.5)"/>
-              <!-- eyes -->
-              <circle cx="70" cy="90" r="12" fill="#22d3ee"/>
-              <circle cx="130" cy="90" r="12" fill="#22d3ee"/>
-              <!-- nose -->
-              <circle cx="100" cy="115" r="16" fill="#fb7185"/>
-              <!-- smile -->
-              <path d="M62 140 Q100 162 138 140" fill="none" stroke="#7C3AED" stroke-width="8" stroke-linecap="round"/>
-              <!-- hat -->
-              <rect x="54" y="48" width="92" height="22" rx="11" fill="#7C3AED"/>
-              <circle cx="54" cy="59" r="11" fill="#22d3ee"/>
-              <circle cx="146" cy="59" r="11" fill="#22d3ee"/>
-              <!-- spinning coin -->
-              <g>
-                <circle id="coin" cx="170" cy="40" r="16" fill="#22d3ee">
-                  <animateTransform attributeName="transform" type="rotate" from="0 170 40" to="360 170 40" dur="4s" repeatCount="indefinite"/>
-                </circle>
-                <text x="170" y="44" text-anchor="middle" font-size="10" font-weight="800" fill="#0b0b14">SOL</text>
-              </g>
-            </svg>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="section">
-      <div class="marquee">
-        <div class="marquee-track">
-          <div class="pill">⚡ Solana Fast</div>
-          <div class="pill">🤡 Meme‑First</div>
-          <div class="pill">🎯 Community‑Led</div>
-          <div class="pill">🧠 Smart Nonsense</div>
-          <div class="pill">🫧 No Taxes</div>
-          <div class="pill">🪙 Bonding Curve Launch</div>
-          <div class="pill">🎉 Daily Meme Drops</div>
-          <div class="pill">🎪 On‑Chain Circus</div>
-          <div class="pill">🤹 Juggler Airdrops</div>
-        </div>
-      </div>
-    </div>
-
-    <section id="scenario" class="section grid">
-      <div class="card" style="padding:20px">
-        <h2>The Scenario: The On‑Chain Circus 🎪</h2>
-        <p>Every cycle, the market turns into a circus — clowns, jugglers, and tightrope walkers pretending it’s all serious business. <strong>Sol Clown</strong> leans into the fun: we turn FOMO into HONK‑O, rugs into red carpets, and every green candle into a confetti blast. Bring your memes, bring your honks — if you can’t laugh at your portfolio, you’re probably doing crypto wrong.</p>
-      </div>
-      <div class="card" style="padding:20px">
-        <h2>Utility (The Fun Kind)</h2>
-        <ul class="clean" style="display:grid; gap:10px">
-          <li class="li">🎟️ <b>Clown Pass:</b> weekly meme contests and holder‑only polls to steer the circus acts.</li>
-          <li class="li">🤹 <b>Juggler Drops:</b> surprise art/merch claim codes shared live in Telegram & X Spaces.</li>
-          <li class="li">🎭 <b>Stage Call:</b> spotlight community creators on the homepage feed.</li>
-          <li class="li">🪙 <b>On‑Chain Games:</b> silly mini‑games that tip winners in $CLOWN (community treasury).</li>
-        </ul>
-      </div>
-      <div class="card" style="padding:20px">
-        <h2 id="how">How to Buy</h2>
-        <ol style="margin:0; padding-left:18px; line-height:1.7">
-          <li>Get a Solana wallet (Phantom, Backpack, etc.) and fund with SOL.</li>
-          <li>Open the <b>Buy on Pump.fun</b> button and purchase along the bonding curve.</li>
-          <li>After launch completes/migrates, you can trade on DEX as liquidity appears.</li>
-          <li>Replace the contract address on this site with your live one and share everywhere.</li>
-        </ol>
-        <p class="note" style="margin-top:8px">No financial advice. Memes only. Laugh responsibly.</p>
-      </div>
-    </section>
-
-    <section id="tokenomics" class="section grid">
-      <div class="card" style="padding:20px">
-        <h2>Tokenomics</h2>
-        <ul class="clean" style="display:grid; gap:10px">
-          <li class="li">🧮 <b>Supply:</b> 1,000,000,000 $CLOWN</li>
-          <li class="li">🪙 <b>Launch:</b> Pump.fun bonding curve</li>
-          <li class="li">💸 <b>Taxes:</b> 0%</li>
-          <li class="li">🔒 <b>Treasury:</b> Meme contests, creator bounties, and community prizes</li>
-        </ul>
-      </div>
-      <div class="card" style="padding:20px">
-        <h2>Roadmap</h2>
-        <ul class="clean" style="display:grid; gap:10px">
-          <li class="li">🎈 <b>Act I:</b> Launch on Pump.fun, viral meme kit, clown name‑tags</li>
-          <li class="li">🎉 <b>Act II:</b> Holder contests, first on‑chain mini‑game, Spaces with honk‑sfx</li>
-          <li class="li">🎪 <b>Act III:</b> Community treasury votes, merch drops, creator collabs</li>
-          <li class="li">🌕 <b>Finale:</b> The Big Top Party stream — because the show must go moon</li>
-        </ul>
-      </div>
-      <div class="card" style="padding:20px">
-        <h2>Press Kit</h2>
-        <p>Logos, banners, and badges are baked into this site as SVG (crisp at any size). Right‑click → Save as… or copy the SVG code directly from the page source.</p>
-        <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center">
-          <span class="pill">🤡 Logo</span>
-          <span class="pill">🎯 Banner</span>
-          <span class="pill">🏷️ Badges</span>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="wrap footer">
-    <div>© <span id="yr"></span> Sol Clown • Built on Solana • Made by degens, for degens</div>
-    <div style="display:flex; gap:10px">
-      <a class="btn alt" href="#scenario">Back to top</a>
-    </div>
-  </footer>
-
-  <script>
-    // ---- Quick links (replace with your actual URLs) ----
-    const PUMPFUN_URL = "https://pump.fun/coin/YOUR_TOKEN_ADDRESS_HERE"; // set after launch
-    const DEXS_URL    = "https://dexscreener.com/solana/YOUR_TOKEN_ADDRESS_HERE"; // optional
-    const X_URL       = "https://x.com/yourhandle";
-    const TG_URL      = "https://t.me/yourchannel";
-
-    document.getElementById('buyBtn').href = PUMPFUN_URL;
-    document.getElementById('chartBtn').href = DEXS_URL;
-    document.getElementById('xBtn').href = X_URL;
-    document.getElementById('tgBtn').href = TG_URL;
-
-    // ---- Copy address ----
-    const ca = document.getElementById('ca');
-    document.getElementById('copy').addEventListener('click', async () => {
-      try {
-        await navigator.clipboard.writeText(ca.textContent.trim());
-        const b = event.target; const old = b.textContent; b.textContent = 'Copied!';
-        setTimeout(() => b.textContent = old, 1200);
-        confettiBurst();
-      } catch(e){ alert('Copy failed'); }
-    });
-
-    // ---- Year ----
-    document.getElementById('yr').textContent = new Date().getFullYear();
-
-    // ---- Lightweight confetti ----
-    const canvas = document.getElementById('confetti');
-    const ctx = canvas.getContext('2d');
-    let W, H, parts=[]; const colors=['#7C3AED','#22d3ee','#84cc16','#fb7185','#f5f6ff'];
-    const rand = (a,b)=>Math.random()*(b-a)+a;
-
-    function resize(){ W=canvas.width=window.innerWidth; H=canvas.height=window.innerHeight; }
-    window.addEventListener('resize', resize); resize();
-
-    function spawn(n=80){
-      for(let i=0;i<n;i++){
-        parts.push({x:rand(0,W), y:rand(-H,0), r:rand(2,5), s:rand(1,3), c:colors[(Math.random()*colors.length)|0], a:rand(.6,1)});
-      }
-    }
-
-    function loop(){
-      ctx.clearRect(0,0,W,H);
-      parts.forEach(p=>{ p.y += p.s; p.x += Math.sin(p.y*.02); if(p.y>H) { p.y=rand(-20,0); p.x=rand(0,W);} });
-      parts.forEach(p=>{ ctx.globalAlpha=p.a; ctx.fillStyle=p.c; ctx.beginPath(); ctx.arc(p.x,p.y,p.r,0,Math.PI*2); ctx.fill();});
-      requestAnimationFrame(loop);
-    }
-    spawn(140); loop();
-
-    // user triggered burst
-    function confettiBurst(){
-      for(let i=0;i<60;i++) parts.push({x:W*0.25+Math.random()*W*0.5, y:H*0.35+Math.random()*H*0.3, r:rand(2,5), s:rand(2,4), c:colors[(Math.random()*colors.length)|0], a:1});
-    }
-
-    // small entrance burst
-    setTimeout(confettiBurst, 600);
-  </script>
+  </div>
 </body>
 </html>
